--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,7 +42,7 @@ jobs:
           #sudo apt install gh -y -q
           #sudo apt update -q 
           #sudo apt upgrade -q
-          #sudo gh auth login --with-token < ${{ secrets.ghtoken }}
+          sudo gh auth login --with-token < ${{ secrets.ghtoken }}
           # echo now you are connected to github
           
           sudo gh repo create $REPO  --template=$TEMPLATE --confirm --$ACCESS
