--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,6 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          sh option 
           #source option 
           #sudo apt update -q && sudo apt install git-all -y -q
           #sudo apt install software-properties-common -y 
