--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,9 +37,11 @@ jobs:
           echo ${{ secrets.ghtoken }} > token.txt
           ls 
           gh auth login --with-token < token.txt
+          git delete origin 
+          
           git remote -v
           echo login is done
-          gh repo create --repo $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
+          gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
           git remote -v
           echo repo create from template is done 
           gh repo clone $GHACCOUNT/$REPO
