--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,7 +44,7 @@ jobs:
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
           git remote -v
           echo repo create from template is done 
-          https://github.com/$GHACCOUNT/$REPO.git
+          git clone https://github.com/$GHACCOUNT/$REPO.git
           
           echo repo clone is done 
           cd $REPO
