--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,6 +43,8 @@ jobs:
           echo login is done
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
           git remote -v
+          git commit -m "First batch of files"
+
           echo repo create from template is done 
           git clone https://github.com/$GHACCOUNT/$REPO.git
           
