--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,6 +43,10 @@ jobs:
           echo login is done
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
           git remote -v
+          git config --global user.name "aliomom"
+          git config --global user.email "a.omom11115@gmail.com"
+
+
           git commit -m "First batch of files"
 
           echo repo create from template is done 
