--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,11 +46,11 @@ jobs:
           git config --global user.name "aliomom"
           git config --global user.email "a.omom11115@gmail.com"
 
-          #git add .
-          #git commit -m "First batch of files"
+          git add .
+          git commit -m "First batch of files"
 
           echo repo create from template is done 
-          git clone  git@github.com:$GHACCOUNT/$REPO.git
+          git clone  https://github.com/$GHACCOUNT/$REPO.git
           
           echo repo clone is done 
           cd $REPO
