--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,12 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: source option
+      - name: Check out my other private repo
+        uses: actions/checkout@master
+        with:
+          repository: $GHACCOUNT/$REPO
+          token: ${{ secrets.ghtoken }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
