--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: source option
+        run: source option && git remote rm origin 
       - name: Check out my other private repo
         uses: actions/checkout@master
         with:
