--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           ls 
-          source option && git remote rm origin 
+          source option && 
          
           echo ${{ secrets.ghtoken }} > token.txt
           ls 
@@ -39,6 +39,7 @@ jobs:
           git remote -v
           echo login is done
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
+          git remote rm origin 
           git remote -v
           git config --global user.name "aliomom"
           git config --global user.email "a.omom11115@gmail.com"
