--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,7 +59,7 @@ jobs:
           sed -i 's/ske/$REPO/g' mysql.yaml
           sed -i 's/ske/$REPO/g' namespace.yaml
           echo string replace is done 
-          git commit
+          git commit -a
           git push orgin master
         
           echo push is done 
