--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -60,7 +60,7 @@ jobs:
           sed -i 's/ske/$REPO/g' namespace.yaml
           echo string replace is done 
           git commit -a -m "iit"
-          git push origin master
+          git push origin main
         
           echo push is done 
       # sudo apt update -q && sudo apt install git-all -y -q
