--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -62,7 +62,7 @@ jobs:
           git commit -a -m "iit"
           git remote -v
           #git remote set-url origin git@github.com:@GHACCOUNT/$REPO.git
-          gh pr create -f 
+          gh pr create --base=@{upstream} --head=@{push} -f
         
           echo push is done 
       # sudo apt update -q && sudo apt install git-all -y -q
