--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,6 +51,7 @@ jobs:
           echo string replace is done 
           git commit -a -m "iit"
           git remote -v
+          git remote rm origin 
           #git remote set-url origin git@github.com:@GHACCOUNT/$REPO.git
           git remote add origin https://{aliomom}:{secret.PASSWORD}@github.com/{aliomom}/$REPO.git
 
