--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,8 +47,8 @@ on:
       - run: |
 
          mkdir  $REPO && cd $REPO
-         touch .env
-         touch .htaccess
+         echo  ${{ secrets.env }} > .env
+         echo  ${{ secrets.htaccess }} > .htaccess
          mkdir jwt && cd jwt
          openssl genpkey -out private.pem -aes256 -passout ${{ secrets.PASS }} -algorithm rsa -pkeyopt rsa_keygen_bits:4096 
          openssl pkey -passin ${{ secrets.PASS }} -in private.pem -out public.pem -pubout
