--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,12 +50,14 @@ jobs:
          token: ${{ secrets.ENVGHTOKEN }}
       - run: |
 
-         mkdir  $REPO && cd $REPO
+         mkdir $REPO && cd $REPO
          echo  ${{ secrets.ENV }} > .env
          echo  ${{ secrets.HTACCESS }} > .htaccess
          mkdir jwt && cd jwt
-         openssl genpkey -out private.pem -aes256 -passout ${{ secrets.PASS }} -algorithm rsa -pkeyopt rsa_keygen_bits:4096 
-         openssl pkey -passin ${{ secrets.PASS }} -in private.pem -out public.pem -pubout
+         openssl genpkey -out private.pem -aes256 -passout pass:${{ secrets.PASS }} -algorithm rsa -pkeyopt rsa_keygen_bits:4096 
+         openssl pkey -passin pass:${{ secrets.PASS }} -in private.pem -out public.pem -pubout
          git commit -a -m "add .env and .htacces and jwt"
+         ls -al 
+         cd .. && ls -al 
          git push 
          
