--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,7 +55,7 @@ jobs:
          echo  ${{ secrets.HTACCESS }} > .htaccess
          mkdir jwt && cd jwt
          openssl genpkey -out private.pem -aes256 -pass pass:${{ secrets.PASS }} -algorithm rsa -pkeyopt rsa_keygen_bits:4096 
-         openssl pkey -pass pass:${{ secrets.PASS }} -in private.pem -out public.pem -pubout
+         openssl pkey -passin pass:${{ secrets.PASS }} -in private.pem -out public.pem -pubout
          git commit -a -m "add .env and .htacces and jwt"
          ls -al 
          cd .. && ls -al 
