--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,23 +6,23 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+env: 
+  REPOENV: REPOENV
 
-  workflow_dispatch:
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      repo: repoenv
+ 
 
     steps:
       - uses: actions/checkout@v2
       - name: Run a multi-line script
         run: |
           source option 
-          $repoenv=$REPO
+          $REPOENV=$REPO
           echo ${{ secrets.ghtoken }} > token.txt
           gh auth login --with-token < token.txt
           git remote rm origin 
