--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,12 +21,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run a multi-line script
         env: 
-          REP:  123
+          REP: 123
         run: |
           source option 
           echo ${REP}
-          echo $REPO
-          ${REP} = "$REPO"
+          echo $REPO > ${REP}
+
           echo ${{ secrets.ghtoken }} > token.txt
           gh auth login --with-token < token.txt
           git remote rm origin 
