--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,7 @@ jobs:
           REP: 123
        
         run: |
+          
           source option 
           echo "RIPP=${REPO}" >> $GITHUB_ENV
           #echo "::set-env name=REP::$REPO"
@@ -40,8 +41,9 @@ jobs:
           gh repo create $GHACCOUNT/$REPO  --template=$TEMPLATE --confirm --$ACCESS
           echo repo is created 
           git remote rm origin 
-          git config --global user.name "aliomom"
-          git config --global user.email "a.omom11115@gmail.com"
+          echo ${GH_USERNAME}
+          git config --global user.name ${{ github.event.schedule.user.login }}
+          git config --global user.email "yescloud@gmail.com"
           echo git config is done 
           
         
