--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,6 +51,7 @@ jobs:
           git remote rm origin 
           #git remote set-url origin git@github.com:@GHACCOUNT/$REPO.git
           git remote add origin https://aliomom:${{ secrets.ghtoken }}@github.com/aliomom/$REPO.git
+          git add .
           git commit -a -m "iit"
           git push --set-upstream origin main
       - uses: actions/checkout@v2
