--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,7 +53,8 @@ jobs:
           git remote add origin https://aliomom:${{ secrets.ghtoken }}@github.com/aliomom/$REPO.git
           git add .
           git commit -a -m "iit"
-          git push --set-upstream origin main
+          #git push --set-upstream origin main
+          git push origin main
       - uses: actions/checkout@v2
         with:
          repository: yes-soft-de/environment-tools
