--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -71,10 +71,13 @@ jobs:
          echo the repo is 
          echo ${RIPP}
          mkdir -p ${RIPP} && cd ${RIPP}
+         echo creating new directory is done
          ls -al
          echo  ${{ secrets.ENV }} > .env
          echo  ${{ secrets.HTACCESS }} > .htaccess
+         echo creating .env and .htaccess is done  
          mkdir jwt && cd jwt
+         
          openssl genpkey -out private.pem -aes256 -pass pass:${{ secrets.PASS }} -algorithm rsa -pkeyopt rsa_keygen_bits:4096 
          openssl pkey -passin pass:${{ secrets.PASS }} -in private.pem -out public.pem -pubout
          ls -al 
