--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -71,17 +71,24 @@ jobs:
          echo the repo is 
          echo ${RIPP}
          mkdir -p ${RIPP} && cd ${RIPP}
+         
          echo creating new directory is done
          ls -al
          echo  ${{ secrets.ENV }} > .env
+         echo create .env
          echo  ${{ secrets.HTACCESS }} > .htaccess
+         echo create .htaccess
          echo creating .env and .htaccess is done  
+         
          mkdir jwt && cd jwt
+         echo creating new jwt dir
          
          openssl genpkey -out private.pem -aes256 -pass pass:${{ secrets.PASS }} -algorithm rsa -pkeyopt rsa_keygen_bits:4096 
          openssl pkey -passin pass:${{ secrets.PASS }} -in private.pem -out public.pem -pubout
+         echo creating new jwt 
          ls -al 
          cd .. && ls -al
+         
          git add .
          git commit -a -m "add .env and .htacces and jwt"
          git push 
