--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -94,3 +94,13 @@ jobs:
          git commit -a -m "add .env and .htacces and jwt"
          git push 
          
+      - uses: google-github-actions/setup-gcloud@master
+        with:
+          version: '290.0.1'
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
+          service_account_email: ${{ secrets.service_account_email }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+          export_default_credentials: true
+
+      - run: |-
+          ls 
