--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,8 @@ jobs:
           source option 
           echo "RIPP=${REPO}" >> $GITHUB_ENV
           echo "envpriv=${envpriv}" >> $GITHUB_ENV
+          echo "GKE_CLUSTER=${GKE_CLUSTER}" >> $GITHUB_ENV
+          echo "GKE_ZONE=${GKE_ZONE}" >> $GITHUB_ENV
           #echo "::set-env name=REP::$REPO"
           echo $RIPP
           echo ${{ secrets.ghtoken }} > token.txt
